--- a/src/EVEMon/EVEMon.csproj
+++ b/src/EVEMon/EVEMon.csproj
@@ -1246,12 +1246,9 @@
   </Target>
   -->
   <PropertyGroup>
-    <PreBuildEvent>cd $(SolutionDir)tools\ResFileCreator\$(OutDir)
-EVEMonResFileCreator.exe</PreBuildEvent>
+    <PreBuildEvent>cd $(SolutionDir)tools\ResFileCreator\$(OutDir) && EVEMonResFileCreator.exe</PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>del "$(ProjectDir)"EVEMon.res
-if exist "$(TargetDir)"EVEMon.exe.config del "$(TargetDir)"EVEMon.exe.config
-if exist "$(TargetDir)"stdole.dll del "$(TargetDir)"stdole.dll</PostBuildEvent>
+    <PostBuildEvent>del "$(ProjectDir)"EVEMon.res & if exist "$(TargetDir)"EVEMon.exe.config del "$(TargetDir)"EVEMon.exe.config & if exist "$(TargetDir)"stdole.dll del "$(TargetDir)"stdole.dll</PostBuildEvent>
   </PropertyGroup>
 </Project>
