Hacky attempt to verify cd worked.

--- a/src/EVEMon/EVEMon.csproj
+++ b/src/EVEMon/EVEMon.csproj
@@ -1247,7 +1247,8 @@
   -->
   <PropertyGroup>
     <PreBuildEvent>cd $(SolutionDir)tools\ResFileCreator\$(OutDir)
-.\EVEMonResFileCreator.exe</PreBuildEvent>
+pwd
+$(SolutionDir)tools\ResFileCreator\$(OutDir)\EVEMonResFileCreator.exe</PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PostBuildEvent>del "$(ProjectDir)"EVEMon.res
